인증, 인가 기능 구현